bgg fixed --- ng server error in compile time

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -27,5 +27,10 @@
   </div> <!-- card.// -->
 </div>
 
+<div class="row">
+  <div class="col-3">
+      {{ message | async | json }}
+  </div>
+</div>
 
 
