--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid ">
   <div class="card">
     <article class="card-group-item">
       <header class="card-header">
@@ -6,7 +6,7 @@
       </header>
       <div class="filter-content">
         <div class="card-body">
-          <div class="row">
+          <div class="row m-0">
             <div class="col-3">
               <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active"  role="tab" routerLink="/">Home</a>
@@ -20,17 +20,17 @@
               </div>
             </div>
           </div>
-
+          <div class="row">
+            <div class="col-3">
+              {{ message | async | json }}
+            </div>
+          </div>
         </div> <!-- card-body.// -->
       </div>
     </article> <!-- card-group-item.// -->
   </div> <!-- card.// -->
 </div>
 
-<div class="row">
-  <div class="col-3">
-      {{ message | async | json }}
-  </div>
-</div>
+
 
 
