--- a/frontend/src/app/component/edit-meeting/edit-meeting.component.html
+++ b/frontend/src/app/component/edit-meeting/edit-meeting.component.html
@@ -62,8 +62,8 @@
                             </div>
 
                             <div class="form-group">
-                                <button [disabled]="loading" class="btn btn-primary">
-                                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                <button [disabled]="loadingImg" class="btn btn-primary">
+                                    <span *ngIf="loadingImg" class="spinner-border spinner-border-sm mr-1"></span>
                                     Update
                                 </button>
                                 <a routerLink="/" class="btn btn-link">View List</a>
